<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:textColor="@color/white"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/blog"
            android:textColor="@color/white"
            android:title="@string/menu_blogs"
            />

        <item
            android:id="@+id/nav_slideshow"
            android:textColor="@color/white"
            android:icon="@drawable/baseline_miscellaneous_services_24"
            android:title="@string/menu_services"
            />
          <item
            android:id="@+id/nav_contactus"
            android:textColor="@color/white"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us"
            />
    </group>
</menu>

